CD/Deployment-Manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
  labels:
    app: streamlit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
      - name: streamlit-app
        image: shivam139/streamlit-app:v1
        ports:
        - containerPort: 8501
