CD/Deployment-Manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: streamlit-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: demanddata.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-app
                port:   
                  number: 7080
          - path: /prometheus
            pathType: Prefix
            backend:
              service: 
                name: monitoring-kube-prometheus-prometheus
                port: 
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service: 
                name: monitoring-grafana
                port: 
                  number: 80
